# zcoder

./: Cargo.toml
crates/zc-common/: Cargo.toml
crates/zc-common/src/: error.rs  lib.rs
crates/zc-common/src/event/: mod.rs  mpsc.rs
crates/zc-core/: Cargo.toml
crates/zc-core/src/: derive_aliases.rs  error.rs  event.rs  executor.rs  lib.rs
crates/zc-core/src/exec/: exec_event.rs  executor.rs
crates/zc-core/src/model/: error.rs  mod.rs  model_manager.rs
crates/zc-core/src/model/base/: crud_fns.rs  db_bmc.rs  prep_fields.rs
crates/zc-core/src/model/bus/: mod.rs  model_event.rs
crates/zc-core/src/model/db/: db_impl.rs  db_setup.rs  mod.rs
crates/zc-core/src/model/entities/: common.rs  mod.rs  run.rs
crates/zc-core/src/model/types/: epoch_us.rs  id.rs  mod.rs
crates/zc-tui/: Cargo.toml
crates/zc-tui/src/: error.rs  event.rs  lib.rs
crates/zc-tui/src/core/: app_event_handlers.rs  event.rs  mod.rs  model_loop.rs  ping_timer.rs  term_reader.rs  tui_event_handlers.rs  tui_impl.rs  tui_loop.rs
crates/zc-tui/src/core/event/: mod.rs  tui_event.rs
crates/zc-tui/src/core/tui_state/: mod.rs  state_processor.rs  tui_state_base.rs
crates/zc-tui/src/view/: answer_view.rs  footer_view.rs  main_view.rs  prompt_view.rs  status_view.rs
crates/zc-tui/src/view/style/: style_common.rs  style_consts.rs
dev/specs/: spec-tui-core.md  spec-tui-general.md  spec-tui-view.md
src/: cmd.rs  main.rs
src/exec/: executor.rs  mod.rs
src/tui/: event.rs  mod.rs  tui_loop.rs
src/tui/view/: main_view.rs
