[package]
name = "zcoder"
version = "0.0.2-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "AI coding CLI — very early stage"
keywords = ["coding-harness","coding-ai"]
homepage = "https://github.com/jeremychone/zcoder"
repository = "https://github.com/jeremychone/zcoder"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# missing_docs = "warn"

[[bin]]
name = "zc"
path = "src/main.rs"

[workspace]
members = [
    "crates/zc-core",
    "crates/zc-common",
    "crates/zc-tui",
]
resolver = "3"

[dependencies]
# -- Sub Crates
zc-core = { workspace = true }
zc-tui = { workspace = true }
# -- Async
tokio = { workspace = true }
# -- CLI
clap = { workspace = true }
# -- AI
# -- FS
# -- Others
derive_more = { workspace = true }

[workspace.dependencies]
zc-core = { path = "crates/zc-core" }
zc-common = { path = "crates/zc-common" }
zc-tui = { path = "crates/zc-tui" }
# -- Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
# -- CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# -- AI
genai = { version = "=0.6.0-beta.20" }
udiffx = { version = "0.1", features = ["prompt"]}
# -- FS
simple-fs = { version = "0.12"}
# -- Others
derive_more = { version = "2", features = ["from", "display"] }

