[package]
name = "zc-core"
version = "0.0.2-WIP"
edition = "2024"

[dependencies]
# -- Sub Crates
zc-common = { workspace = true }
# -- AI
genai = { workspace = true }
udiffx = { workspace = true }
# -- DB
rusqlite = { workspace = true }
modql = { workspace = true }
# -- FS
simple-fs = { workspace = true }
# -- Others
macro_rules_attribute = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }
